--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@
 carpentry: "incubator"   # "swc" in future
 
 # Overall title for pages.
-title: "Reproducible computational environments using containers: Introduction to Singularity"
+title: "Reproducible Computational Environments Using Containers: Introduction to Docker and Singularity (day 2)"
 
 # Life cycle stage of the lesson
 # See this page for more details: https://cdh.carpentries.org/the-lesson-life-cycle.html
 # Possible values: "pre-alpha", "alpha", "beta", "stable"
-life_cycle: "alpha"
+life_cycle: "stable"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
@@ -58,7 +58,7 @@ instructor_post_survey: "https://www.surveymonkey.com/r/instructor_training_post
 
 
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
-start_time: 0
+start_time: 600
 
 # Specify that things in the episodes collection should be output.
 collections:
