Makes it work or ARCHER2

--- a/files/osu_latency.slurm.template
+++ b/files/osu_latency.slurm.template
@@ -1,16 +1,15 @@
 #!/bin/bash
 
 # Slurm job options (name, compute nodes, job time)
-#SBATCH --job-name=<YOUR JOB NAME>
+#SBATCH --job-name=osu_bench
 #SBATCH --time=0:10:0
 #SBATCH --nodes=2
 #SBATCH --tasks-per-node=128
 #SBATCH --cpus-per-task=1
 
-# Replace [budget code] below with your budget code (e.g. t01)
 #SBATCH --partition=standard
 #SBATCH --qos=standard
-#SBATCH --account=<YOUR ACCOUNT CODE>
+#SBATCH --account=ta032
 
 # Setup the job environment (this module needs to be loaded before any other modules)
 module load epcc-job-env
